<resources>
    <string name="app_name" translatable="false">Aurora AOne</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="understand">I understand</string>
    <string name="failed_to_open_tunnel">Failed to open secure tunnel</string>
    <string name="tunnel_closed">Secure tunnel closed</string>
    <string name="lost_connection">Connection to Gateway lost</string>
    <string name="view_all_devices">Set Up Devices</string>
    <plurals name="number_lights">
        <item quantity="one">%d light</item>
        <item quantity="other">%d lights</item>
    </plurals>
    <plurals name="number_sensors">
        <item quantity="one">%d sensor</item>
        <item quantity="other">%d sensors</item>
    </plurals>
    <plurals name="number_power">
        <item quantity="one">%d power</item>
        <item quantity="other">%d power</item>
    </plurals>
    <plurals name="number_sockets">
        <item quantity="one">%d socket</item>
        <item quantity="other">%d sockets</item>
    </plurals>
    <plurals name="number_switches">
        <item quantity="one">%d switch</item>
        <item quantity="other">%d switches</item>
    </plurals>
    <plurals name="number_legacy_schedules">
        <item quantity="one">%d legacy schedule</item>
        <item quantity="other">%d legacy schedules</item>
    </plurals>
    <string name="all_devices">All Devices</string>
    <string name="lights">Lights</string>
    <string name="unassigned">Unassigned</string>
    <string name="updating">Updating…</string>
    <string name="hubs_zones">Hubs</string>
    <string name="add_new_hub_zone">Add new Hub</string>
    <string name="online">Online</string>
    <string name="connecting">Connecting</string>
    <string name="offline">Offline</string>
    <string name="sign_out">Sign out</string>
    <string name="acquire_a_hub">Acquire a Hub</string>
    <string name="acquire_paragraph">Tap scan below to load the scanner view, when the camera appears point it at the QR code on the back of your hub. Tap Help for more instructions.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="help">Help</string>
    <string name="acquiring_hub">Acquiring Hub</string>
    <string name="acquiring_please_wait">Acquiring, please wait…</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="name_label">Name:</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="check_your_email">Check your email for your verification code</string>
    <string name="activation_code">Activation code</string>
    <string name="hub_name">Hub name</string>
    <string name="aone_hub">AOne Hub</string>
    <string name="done">Done</string>
    <string name="failed_to_rename_hub">Failed to rename Hub</string>
    <string name="failed_to_activate_account">Failed to activate Account</string>
    <string name="go">Go</string>
    <string name="create_a_new_scene">Create a new Scene</string>
    <string name="try_out_some_favourites">Try out some favourites:</string>
    <string name="create_a_custom_scene_below">Create a custom Scene below:</string>
    <string name="music">Music</string>
    <string name="dinner">Dinner</string>
    <string name="party">Party</string>
    <string name="movie">Movie</string>
    <string name="nightlight">Nightlight</string>
    <string name="evening">Evening</string>
    <string name="day">Day</string>
    <string name="morning">Morning</string>
    <string name="give_your_scene_a_name">Give your Scene a name</string>
    <string name="style_your_button">Style your button</string>
    <string name="select_a_colour">Select a colour:</string>
    <string name="select_an_icon">Select an icon:</string>
    <string name="device_details">Device Details</string>
    <string name="space">Space</string>
    <string name="default_name">Default name</string>
    <string name="ota_status">OTA status</string>
    <string name="eui">EUI</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="up_to_date">Up to date</string>
    <string name="sensors">Sensors</string>
    <string name="power">Power</string>
    <string name="switches">Switches</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_me_password_link">Email me password link</string>
    <string name="change_password">Change password</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="pair_new_devices">Pair New Devices</string>
    <string name="pairing">Pairing</string>
    <string name="discovery_of_devices">Discovery of new Devices can take up to three minutes…</string>
    <string name="searching_for_devices">Searching for Devices</string>
    <string name="finish_pairing">Finish Pairing</string>
    <string name="pairing_help">Pairing help</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="discovered_devices_subtitle">Rename your devices and assign them to a Space by tapping on the tiles below:</string>
    <string name="identifying_device">Identifying Device</string>
    <string name="identify">Identify</string>
    <string name="delete">Delete</string>
    <string name="spaces">Spaces</string>
    <string name="searching_for_new_devices">Searching for new Devices…</string>
    <string name="create_new_space">Create new Space / Group</string>
    <string name="create_new_group">Create new Group</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_space">New Space</string>
    <string name="add_manage_devices">Manage Devices</string>
    <string name="delete_space">Delete Space</string>
    <string name="delete_group">Delete Group</string>
    <string name="uniqueGroupWarning">You can only have a Device in one Space, this will remove the Device from any other Space it is in. Do you wish to continue?</string>
    <string name="yes">Yes</string>
    <string name="yes_dont_warn">Yes, don\'t warn again</string>
    <string name="no">No</string>
    <string name="gateway_migrating">Your Hub requires a new firmware update, this can take up to 10 minutes. The AOne app will now close whilst the update takes place, please relaunch the app after your Hub has rebooted and both LEDs are green</string>
    <string name="create_scene">Create Scene</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="create_dynamic_event">Create a Dynamic Event</string>
    <string name="schedules">Schedules</string>
    <string name="no_events">No scheduled Events</string>
    <string name="no_dynamic_events">No Dynamic Events</string>
    <string name="one_event">1 scheduled Event</string>
    <plurals name="multiple_events">
        <item quantity="one">%d scheduled Events</item>
        <item quantity="other">%d scheduled Events</item>
    </plurals>
    <plurals name="multiple_dynamic_events">
        <item quantity="one">%d Dynamic Events</item>
        <item quantity="other">%d Dynamic Events</item>
    </plurals>
    <string name="max_scenes">Maximum number of Scenes reached</string>
    <string name="schedule_name">Schedule for %s</string>
    <string name="dynamic_event_name">Dynamic events for %s</string>
    <string name="schedule">Schedule</string>
    <string name="scheduled_events">Scheduled Events</string>
    <string name="dynamic_events">Dynamic Events</string>
    <string name="manage_nested_spaces">Manage Spaces / Groups</string>
    <string name="reset_tours">Reset tours</string>
    <string name="reset_intro">Reset intro</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="account">Account</string>
    <string name="secondary_mode_title">Secondary Mode:</string>
    <string name="battery_dimmer_secondary_mode">Once set up in the App to access this mode, PRESS and HOLD the Dimmer knob for 1 second (the red LED will light up momentarily). You can now adjust the feature by twisting the knob CLOCKWISE or ANTI-CLOCKWISE.\n\nTo return to Dimmer mode, PRESS and HOLD again for 1 second. Alternatively, the Dimmer will automatically return to Dimmer mode after 15 seconds of inactivity.</string>
    <string name="colour_tuning_mode_title">Colour Tuning Mode:</string>
    <string name="colour_tuning_mode">In Colour tuning mode, rotating the Dimmer clockwise will cool the colour temperature and anti-clockwise will warm the colour temperature.</string>
    <string name="colour_mode_title">Colour Mode:</string>
    <string name="colour_mode">Once in RGB mode you can select one of 20 preset colours by rotating the dimmer clockwise and anti-clockwise.</string>
    <string name="scenes_mode_title">Scene Cycling Mode:</string>
    <string name="scenes_mode">In Scene cycling mode, turning the knob clockwise will recall the next Scene available for the associated Space, and turning anti-clockwise will recall the previous Scene.</string>
    <string name="battery_life_title">Battery Life Notification:</string>
    <string name="battery_life">When the batteries in your dimmer are reaching the end of their life the LED will flash once every 10 minutes.</string>
    <string name="rename_space">Rename Space</string>
    <string name="what_are_spaces_and_groups_title">What are Spaces and Groups:</string>
    <string name="what_are_spaces_and_groups_info">- A Space is an area which contains Devices, like a room in a house. A Group is a collection of Devices, for example some wall lamps in the living room that also contains ceiling lamps</string>
    <string name="what_can_a_space_do_title">What can a Space do:</string>
    <string name="what_can_a_space_do_info">- A Space can be controlled on the Home Screen\n- It can be nested in another Space so that it can be controlled as part of the larger Space.\n- A Space can have Scenes and Schedules\n- Sensors and Switches can be set up to control a Space</string>
    <string name="what_can_a_group_do_title">What can a Group do:</string>
    <string name="what_can_a_group_do_info">- A Group must be nested in a Space or another Group to be controlled\n- A Group can only have Schedules\n- Sensors and Switches can be set up to control a Group</string>
    <string name="differences_between_a_space_and_a_group_title">Differences between a Space and a Group:</string>
    <string name="differences_between_a_space_and_a_group_info">- Spaces are displayed on the Home Screen whereas Groups are not and must be added via the “Manage nested Spaces / Groups” menu in a Space or Group\n- A Group can only have Schedules whereas a Space can also have Scenes</string>
    <string name="enable_office_mode">Enable office mode</string>
    <string name="open_source_licences">Open Source Licences</string>
    <string name="about">About</string>
    <string name="app_version">App version:</string>
    <string name="request_a_feature">Request a feature</string>
    <string name="join_the_beta_test">Join the beta test</string>
    <string name="check_for_app_update">Check for App Update</string>
</resources>